fixed some wrong height values and applied flex tags to the right children

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
 body {
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 /* UTILITIES */
@@ -43,7 +44,7 @@ body {
 /* MAIN SECTION */
 .main-section {
     display: flex;
-    overflow: auto;
+    flex-grow: 1;
 }
 
 /* SIDEBAR SECTION */
@@ -51,7 +52,6 @@ body {
     background-color: black;
     color: lightgray;
     width: 233px;
-    height: calc(100vh - 80px);
     padding: 10px 20px;
     display: flex;
     flex-direction: column;
@@ -113,7 +113,6 @@ main {
     width: 100%;
     background-color: #141922;
     color: white;
-    overflow: auto;
 }
 
 .main-content {
@@ -135,10 +134,10 @@ main {
 .album-gallery {
     display: flex;
     flex-wrap: wrap;
-    width: calc(100% / 6 - 20px);
 }
 
 .album-card {
+    width: calc(100% / 6 - 20px);
     height: 300px;
     width: 300px;
 }
@@ -146,6 +145,9 @@ main {
 .album-card img {
     width: 65%;
 }
+
+
+
 
 
 .toolbar-section {
